--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -24,8 +24,7 @@
 </div>
 
 <div hidden="hidden">
-    <span id="state" state="1" word=""></span>
-    <span id="state_init" state="1"></span>
+    <span id="state" state="1" state_init="1" word=""></span>
     <span id="error" list='[{"error_display":"erro"}]'></span>
 </div>
 
@@ -35,14 +34,15 @@
             <div class="col-4">
                 <label>YOUR CODE</label>
                 <textarea id="userCode"
+                          onpaste="LexicalAnalysis.onUserCodePaste(event)"
                           onkeydown="LexicalAnalysis.onUserCodeKeyDown(event)"
-                          style="width:100%; height:350px"
+                          style="width:100%; height: 50vh;"
                           placeholder="Write your code here"></textarea>
             </div>
             <div class="col-8">
                 <label>YOUR LEXICAL ANALYSIS</label>
                 <br />
-                <canvas id="myCanvas" style="border: 1px solid #d3d3d3; max-width: 100%; max-height: 500px;">
+                <canvas id="myCanvas" style="border: 1px solid #d3d3d3; width: auto; height: 50vh;">
                     Your browser does not support the HTML5 canvas tag.
                 </canvas>
             </div>
