--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -3,24 +3,25 @@
 }
 
 <script src="~/js/core/lexicalAnalysisController.js"></script>
-
+<script src="~/js/core/generalController.js"></script>
+<link href="~/css/general.css" rel="stylesheet" />
 <div hidden="hidden">
-    <img id="character_diagram" src="~/img/Diagrams/Caractere.png" />
-    <img id="bracket_diagram" src="~/img/Diagrams/Colchetes.png" />
-    <img id="division_diagram" src="~/img/Diagrams/Divisão.png" />
-    <img id="space_diagram" src="~/img/Diagrams/Espaco.png" />
-    <img id="exclusive_table_diagram" src="~/img/Diagrams/Identificadores.png" />
-    <img id="equal_diagram" src="~/img/Diagrams/Igual.png" />
-    <img id="bigger_then_diagram" src="~/img/Diagrams/Maior.png" />
-    <img id="less_then_diagram" src="~/img/Diagrams/Menor.png" />
-    <img id="multiplication_diagram" src="~/img/Diagrams/Multiplicação.png" />
-    <img id="number_diagram" src="~/img/Diagrams/Número.png" />
-    <img id="parentheses_diagram" src="~/img/Diagrams/Parenteses.png" />
-    <img id="semicolon_diagram" src="~/img/Diagrams/Ponto_Vírgula.png" />
-    <img id="addition_diagram" src="~/img/Diagrams/Soma.png" />
-    <img id="string_diagram" src="~/img/Diagrams/String.png" />
-    <img id="subtraction_diagram" src="~/img/Diagrams/Subtração.png" />
-    <img id="comma_diagram" src="~/img/Diagrams/Vírgula.png" />
+    <img id="character_diagram" src="~/img/Diagrams/character_diagram.png" />
+    <img id="bracket_diagram" src="~/img/Diagrams/bracket_diagram.png" />
+    <img id="division_diagram" src="~/img/Diagrams/division_diagram.png" />
+    <img id="space_diagram" src="~/img/Diagrams/space_diagram.png" />
+    <img id="exclusive_table_diagram" src="~/img/Diagrams/exclusive_table_diagram.png" />
+    <img id="equal_diagram" src="~/img/Diagrams/equal_diagram.png" />
+    <img id="bigger_then_diagram" src="~/img/Diagrams/bigger_then_diagram.png" />
+    <img id="less_then_diagram" src="~/img/Diagrams/less_then_diagram.png" />
+    <img id="multiplication_diagram" src="~/img/Diagrams/multiplication_diagram.png" />
+    <img id="number_diagram" src="~/img/Diagrams/number_diagram.png" />
+    <img id="parentheses_diagram" src="~/img/Diagrams/parentheses_diagram.png" />
+    <img id="semicolon_diagram" src="~/img/Diagrams/semicolon_diagram.png" />
+    <img id="addition_diagram" src="~/img/Diagrams/addition_diagram.png" />
+    <img id="string_diagram" src="~/img/Diagrams/string_diagram.png" />
+    <img id="subtraction_diagram" src="~/img/Diagrams/subtraction_diagram.png" />
+    <img id="comma_diagram" src="~/img/Diagrams/comma_diagram.png" />
 </div>
 
 <div hidden="hidden">
@@ -32,25 +33,44 @@
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <label>YOUR CODE</label>
+                <label>SEU CÓDIGO EM D+</label>
                 <textarea id="userCode"
                           onpaste="LexicalAnalysis.onUserCodePaste(event)"
                           onkeydown="LexicalAnalysis.onUserCodeKeyDown(event)"
-                          style="width:100%; height: 50vh;"
-                          placeholder="Write your code here"></textarea>
+                          class="fullWidth dinamicHeight"
+                          placeholder="Escreva o seu código aqui.."></textarea>
             </div>
-            <div class="col-8">
-                <label>YOUR LEXICAL ANALYSIS</label>
-                <br />
-                <canvas id="myCanvas" style="border: 1px solid #d3d3d3; width: auto; height: 50vh;">
-                    Your browser does not support the HTML5 canvas tag.
-                </canvas>
+            <div class="col-8 dinamicHeight row">
+                <div class="fullWidth">
+                    <button class="tabLink" onclick="General.openTab('lexicalAnalysis', this, 'darkturquoise')" id="defaultOpen">Análise Léxica</button>
+                    <button class="tabLink" onclick="General.openTab('syntaxAnalisys', this, 'darkturquoise')">Análise Sintática</button>
+                    <button class="tabLink" onclick="General.openTab('symbolTable', this, 'darkturquoise')">Tabela de Símbolos</button>
+                    <button class="tabLink" onclick="General.openTab('generatedErrors', this, 'crimson')" hidden="hidden">Erros</button>
+                </div>
+
+                <div id="lexicalAnalysis" class="tabContent">
+                    <canvas id="canvas">
+                        Your browser does not support the HTML5 canvas tag.
+                    </canvas>
+                </div>
+
+                <div id="syntaxAnalisys" class="tabContent">
+                </div>
+
+                <div id="symbolTable" class="tabContent">
+                </div>
+
+                <div id="generatedErrors" class="tabContent" hidden="hidden">
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-12" id="history_canvas">
-                <h3>HISTORY</h3>
+                <h3>HISTÓRICO DA ANÁLISE LÉXICA</h3>
             </div>
         </div>
     </div>
+    <script>
+        document.getElementById("defaultOpen").click();
+    </script>
 </body>
