--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 <div hidden="hidden">
-    <span id="state" state="1" state_init="1" word=""></span>
+    <span id="state" state="1" state_init="1" word="" token="" entire_code=""></span>
     <span id="error" list='[{"error_display":"erro"}]'></span>
 </div>
 
@@ -36,7 +36,8 @@
                 <label>SEU CÓDIGO EM D+</label>
                 <textarea id="userCode"
                           onpaste="LexicalAnalysis.onUserCodePaste(event)"
-                          onkeydown="LexicalAnalysis.onUserCodeKeyDown(event)"
+                          onkeypress="LexicalAnalysis.onUserCodeKeyPress(event)"
+                          onkeyup="LexicalAnalysis.onUserCodeKeyUp(event)"
                           class="fullWidth dinamicHeight"
                           placeholder="Escreva o seu código aqui.."></textarea>
             </div>
@@ -64,9 +65,18 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12" id="history_canvas">
-                <h3>HISTÓRICO DA ANÁLISE LÉXICA</h3>
+        <div class="row minimalMargin">
+            <div class="col-12 fullHeight">
+                <h4>HISTÓRICO DA ANÁLISE LÉXICA</h4>
+
+                <div class="slideshow-container  dinamicHeight">
+
+                    <div id="slideshow_child" class="fullHeight text-center"></div>
+
+                    <a class="prev" onclick="General.plusHistoryAnalexSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="General.plusHistoryAnalexSlides(1)">&#10095;</a>
+
+                </div>
             </div>
         </div>
     </div>
