--- a/src/LearnCompiler/wwwroot/css/general.css
+++ b/src/LearnCompiler/wwwroot/css/general.css
@@ -94,9 +94,10 @@
     margin-top: 5%;
 }
 
-#userCode{
+#userCode {
     width: 100%;
     height: 95%;
+    border: 1px solid #d3d3d3;
 }
 
 #userCodeHeader {
