--- a/src/LearnCompiler/wwwroot/css/general.css
+++ b/src/LearnCompiler/wwwroot/css/general.css
@@ -19,6 +19,9 @@
     display: none;
     width: 100%;
     height: 100%;
+}
+
+#generatedErrors, #lexicalAnalysis {
     text-align: center;
 }
 
@@ -139,13 +142,13 @@
     color: #eeeeee;
     background-color: #ffffff;
     margin: 0px;
-    font-size: 11px;
+    font-size: 13px;
     font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
 }
 textarea {
     background-color: transparent;
     padding: 5px;
     margin: 0px;
-    font-size: 11px;
+    font-size: 13px;
     font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
 }
