fixed layout and recompile event

--- a/src/LearnCompiler/Views/Home/Index.cshtml
+++ b/src/LearnCompiler/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 <div class="h-50 row">
     <div class="col-4">
         <div class="pb-1">
-            <label>SEU CÓDIGO EM D+</label>
+            <label><strong>SEU CÓDIGO EM D+</strong></label>
             <button id="recompileButton" class="btn btn-sm btn-danger float-right" hidden="hidden" onclick="LexicalAnalysis.onRecompileClick()">Recompilar</button>
         </div>
         <div class="w-100 position-relative">
@@ -94,7 +94,7 @@
 </div>
 <div class="h-50 row">
     <div class="col-12 h-100">
-        <h4>HISTÓRICO DA ANÁLISE LÉXICA</h4>
+        <label><strong>HISTÓRICO DA ANÁLISE LÉXICA</strong></label>
 
         <div class="slideshow-container h-100">
 
