--- a/src/LearnCompiler/wwwroot/css/general.css
+++ b/src/LearnCompiler/wwwroot/css/general.css
@@ -12,6 +12,7 @@ textarea {
     border-color: #d3d3d3 !important;
     resize: none;
     height: 30vh;
+    word-break: break-all;
 }
 
 #highlighterContainer, #inputContainer {
@@ -25,6 +26,7 @@ textarea {
     color: transparent;
     background-color: transparent;
     margin: 0px;
+    word-break: break-all;
 }
 
 .tabLink {
