--- a/src/LearnCompiler/wwwroot/css/site.css
+++ b/src/LearnCompiler/wwwroot/css/site.css
@@ -9,7 +9,7 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: darkgray;
 }
 
 .btn-primary {
@@ -59,9 +59,9 @@ html {
 }
 
 .footer {
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 5vh; /* Vertically center the text there */
 }
